--- a/chat_flutter/pubspec.yaml
+++ b/chat_flutter/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   image_picker: ^0.8.5+3
   google_sign_in: ^5.3.2
   firebase_storage: ^10.2.17
+  firebase_database: ^9.0.15
   firebase_auth: ^3.3.19
+  firebase_database_web: ^0.2.0+14
 
 dev_dependencies:
   flutter_test:
